[gd_scene load_steps=21 format=3 uid="uid://v0uc2yko34gl"]

[ext_resource type="Script" uid="uid://bdg4iibow25if" path="res://src/scripts/hexagonal_tiles.gd" id="2_ihm57"]
[ext_resource type="Texture2D" uid="uid://canl870weld46" path="res://src/tiles/hex_grid.png" id="2_x7cn1"]
[ext_resource type="Shader" uid="uid://b4yhybxijnkyx" path="res://src/shaders/baseMap.gdshader" id="3_q1pjq"]
[ext_resource type="PackedScene" uid="uid://cb6m1sjbf1232" path="res://src/scenes/tile.tscn" id="4_ihm57"]
[ext_resource type="PackedScene" uid="uid://dbmj571b7eoxy" path="res://src/scenes/player.tscn" id="4_xkm8x"]
[ext_resource type="Script" uid="uid://vkl4k4igem0v" path="res://src/scripts/playerStats.gd" id="5_fguah"]
[ext_resource type="Script" uid="uid://cf0y6du8k1ul6" path="res://src/scripts/game_manager.gd" id="5_xkm8x"]
[ext_resource type="PackedScene" uid="uid://cupl85mc5wwnk" path="res://src/scenes/dice.tscn" id="6_7ohmq"]
[ext_resource type="FontFile" uid="uid://jrdb2urrngxx" path="res://src/fonts/ARCADECLASSIC.TTF" id="6_u3dtf"]
[ext_resource type="Script" uid="uid://dewpkj6dratsv" path="res://src/scripts/pointsText.gd" id="7_3cycs"]
[ext_resource type="AudioStream" uid="uid://uoseppn01dip" path="res://src/sounds/Dice-Rolling-Sound-Effect.wav" id="8_l5y5f"]
[ext_resource type="AudioStream" uid="uid://bqol8ohepxt0p" path="res://src/sounds/Video-Game-Charge-Up-Sound-Sound-Effect-_HQ_.wav" id="10_0is84"]
[ext_resource type="AudioStream" uid="uid://dp8irtook3c7g" path="res://src/sounds/ROBLOX Oof Sound Effect.wav" id="13_u3dtf"]
[ext_resource type="PackedScene" uid="uid://felujqfdkoer" path="res://src/scenes/restar_button.tscn" id="13_x7cn1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hn2dp"]
shader = ExtResource("3_q1pjq")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 1.0
shader_parameter/spin_rotation = 0.0
shader_parameter/spin_speed = 4.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(1, 0, 0, 1)
shader_parameter/colour_2 = Color(0.321569, 0, 0.462745, 1)
shader_parameter/colour_3 = Color(0, 0, 0, 1)
shader_parameter/contrast = 2.0
shader_parameter/spin_amount = 0.36
shader_parameter/pixel_filter = 700.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eic6s"]
texture = ExtResource("2_x7cn1")
margins = Vector2i(9, 8)
separation = Vector2i(18, 0)
texture_region_size = Vector2i(110, 96)
0:0/0 = 0
1:0/0 = 0
2:0/next_alternative_id = 2
2:0/0 = 0
2:0/1 = 1
2:0/1/modulate = Color(0.142906, 0.155162, 0.284767, 1)
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_bic2n"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(102, 94)
sources/1 = SubResource("TileSetAtlasSource_eic6s")

[sub_resource type="Animation" id="Animation_0is84"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fguah"]
resource_name = "shake_and_scale"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.500988),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.36, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.226893, -0.226893, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3cycs"]
_data = {
&"RESET": SubResource("Animation_0is84"),
&"shake_and_scale": SubResource("Animation_fguah")
}

[node name="Node2D" type="Node2D"]

[node name="Fondo" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_hn2dp")
offset_left = -829.0
offset_top = -303.0
offset_right = 556.0
offset_bottom = 479.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-140, 93)

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(1.1, 1.1)
tile_set = SubResource("TileSet_bic2n")
format = 2
layer_0/tile_data = PackedInt32Array(131069, 131073, 65536, 196605, 131073, 65536, 262142, 131073, 65536, 196606, 131073, 65536, 196607, 131073, 65536, 131071, 131073, 65536, 131072, 131073, 65536, 196608, 131073, 65536, 131073, 131073, 65536, 131074, 131073, 65536, 196610, 131073, 65536, 131075, 131073, 65536, 65539, 131073, 65536, 65537, 131073, 65536, 65538, 131073, 65536, 1, 131073, 65536, 65536, 131073, 65536, 65535, 131073, 65536, 131070, 131073, 65536, 65533, 131073, 65536, -3, 131073, 65536, 65534, 131073, 65536, -65539, 131073, 65536, -2, 131073, 65536, -65538, 131073, 65536, -65537, 131073, 65536, -1, 131073, 65536, -65536, 131073, 65536, 0, 131073, 65536, -131072, 131073, 65536, -131071, 131073, 65536, -65535, 131073, 65536, 2, 131073, 65536, -65534, 131073, 65536, -131070, 131073, 65536, -131069, 131073, 65536, -65533, 131073, 65536, 3, 131073, 65536)

[node name="HexagonalTiles" type="Node2D" parent="."]
script = ExtResource("2_ihm57")

[node name="T00" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-178, -94)

[node name="T01" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-178, 0)

[node name="T02" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-178, 94)

[node name="T03" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-178, 188)

[node name="T04" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-178, 282)

[node name="T10" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-102, -141)

[node name="T11" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-102, -47)

[node name="T12" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-102, 47)

[node name="T13" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-102, 141)

[node name="T14" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-102, 235)

[node name="T15" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-102, 329)

[node name="T20" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-26, -94)

[node name="T21" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-26, 0)

[node name="T22" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-26, 94)

[node name="T23" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-26, 188)

[node name="T24" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(-26, 282)

[node name="T30" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(50, -141)

[node name="T31" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(50, -47)

[node name="T32" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(50, 47)

[node name="T33" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(50, 141)

[node name="T34" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(50, 235)

[node name="T35" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(50, 329)

[node name="T40" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(126, -94)

[node name="T41" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(126, 0)

[node name="T42" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(126, 94)

[node name="T43" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(126, 188)

[node name="T44" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(126, 282)

[node name="T50" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(202, -141)

[node name="T51" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(202, -47)

[node name="T52" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(202, 47)

[node name="T53" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(202, 141)

[node name="T54" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(202, 235)

[node name="T55" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(202, 329)

[node name="T60" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(278, -94)

[node name="T61" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(278, 0)

[node name="T62" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(278, 94)

[node name="T63" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(278, 188)

[node name="T64" parent="HexagonalTiles" instance=ExtResource("4_ihm57")]
position = Vector2(278, 282)

[node name="Player" parent="." instance=ExtResource("4_xkm8x")]
position = Vector2(-903, -186)
script = ExtResource("5_fguah")

[node name="UI" type="Node2D" parent="."]

[node name="Result" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -619.0
offset_top = -235.0
offset_right = -419.0
offset_bottom = -127.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1]: [color=#ffffff88]-[/color][/wave]
"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="animR" type="AnimationPlayer" parent="UI/Result"]
libraries = {
&"": SubResource("AnimationLibrary_3cycs")
}

[node name="RestarB" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -682.0
offset_top = -112.0
offset_right = -482.0
offset_bottom = -36.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1][color=#ffffff88]: 1[/color][/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="animRB" type="AnimationPlayer" parent="UI/RestarB"]
libraries = {
&"": SubResource("AnimationLibrary_3cycs")
}

[node name="PointsT" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -834.0
offset_top = 294.0
offset_right = -380.0
offset_bottom = 384.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1]Total: [/wave]"
fit_content = true
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Points" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -505.0
offset_top = 302.0
offset_right = -305.0
offset_bottom = 410.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1][color=#ffffff88]0[/color][/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_3cycs")

[node name="animP" type="AnimationPlayer" parent="UI/Points"]
libraries = {
&"": SubResource("AnimationLibrary_3cycs")
}

[node name="HealthT" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -741.0
offset_top = 6.0
offset_right = -489.0
offset_bottom = 79.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1]Health: [/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -562.0
offset_top = 3.0
offset_right = -362.0
offset_bottom = 83.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1][color=#ffffff88]6.0 0[/color][/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="animH" type="AnimationPlayer" parent="UI/Health"]
libraries = {
&"": SubResource("AnimationLibrary_3cycs")
}

[node name="AttackT" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -754.0
offset_top = 68.0
offset_right = -494.0
offset_bottom = 148.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1]Attack: [/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -568.0
offset_top = 73.0
offset_right = -368.0
offset_bottom = 142.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1] [color=#ffffff88]1.0 0[/color][/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="animA" type="AnimationPlayer" parent="UI/Attack"]
libraries = {
&"": SubResource("AnimationLibrary_3cycs")
}

[node name="SpeedT" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -758.0
offset_top = 138.0
offset_right = -505.0
offset_bottom = 209.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1]Speed: [/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -578.0
offset_top = 140.0
offset_right = -378.0
offset_bottom = 209.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1][color=#ffffff88]x1.0 0[/color][/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="animS" type="AnimationPlayer" parent="UI/Speed"]
libraries = {
&"": SubResource("AnimationLibrary_3cycs")
}

[node name="CriticalT" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -742.0
offset_top = 203.0
offset_right = -462.0
offset_bottom = 277.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1]Critical: [/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Critical" type="RichTextLabel" parent="UI"]
custom_minimum_size = Vector2(200, 50)
offset_left = -530.0
offset_top = 206.0
offset_right = -330.0
offset_bottom = 278.0
pivot_offset = Vector2(126, 25)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("6_u3dtf")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[wave amp=20.0 freq=8.0 connected=1][color=#ffffff88]0.01[/color][/wave]"
scroll_active = false
autowrap_mode = 0
tab_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="animC" type="AnimationPlayer" parent="UI/Critical"]
libraries = {
&"": SubResource("AnimationLibrary_3cycs")
}

[node name="Dice" parent="UI" instance=ExtResource("6_7ohmq")]
position = Vector2(-640, -177)

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("5_xkm8x")

[node name="DiceSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-829, -303)
stream = ExtResource("8_l5y5f")

[node name="ChargeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_0is84")
volume_db = 10.0

[node name="Oof" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_u3dtf")

[node name="Node2D" parent="." instance=ExtResource("13_x7cn1")]
position = Vector2(-675, -98)
scale = Vector2(7, 7)
